Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
+  <h4> PHARRELL WILLIAMS </h4>
+          <h2> HAPPY</h2>
+          <h4> FROM DESPICABLE ME...</h4>
   <body>
     <div class="wrapper">
       <div id="front" class="album">
