--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div id="back" class="album">
         
-        <h3> From DESPICABLE ME</h3>
+        <h3> FROM DESPICABLE ME</h3>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
