--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 
       <div id="back" class="album">
         
-        <h3> FROM DESPICABLE ME</h3>
+        <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
+        <h1>HAPPY</h1>
+        <h3></h3>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+
 
         <!-- Level 1 'HAPPY' Header -->
 
