--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
         <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png alt = "Columbia Logo">
         <span>COLUMBIARECORDS.COM</span>
-        <img src = https://s3.amazonaws.com/learn-verified/sony-logo.png alt = "Sony Logo"
+        <img src = https://s3.amazonaws.com/learn-verified/sony-logo.png alt = "Sony Logo">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
